force-app/main/default/objects/FM_Scorecard__c/FM_Scorecard__c.object-meta.xml
<CustomObject>
    <label>FM Scorecard</label>
    <nameField>
        <displayFormat>FMS-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FM Scorecards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>