force-app/main/default/objects/FM_Scorecard__c/fields/Finish_Job_Count__c.field-meta.xml
<CustomField>
    <fullName>Finish_Job_Count__c</fullName>
    <label>Finish Job Count</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>