force-app/main/default/objects/FM_Scorecard__c/fields/FJ_Percent__c.field-meta.xml
<CustomField>
    <fullName>FJ_Percent__c</fullName>
    <label>FJ Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>