force-app/main/default/objects/FM_Scorecard__c/fields/FM__c.field-meta.xml
<CustomField>
    <fullName>FM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FM</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>FM Scorecards</relationshipLabel>
    <relationshipName>FM_Scorecards</relationshipName>
    <type>Lookup</type>
</CustomField>