force-app/main/default/objects/FM_Scorecard__c/fields/Last_QI_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_QI_Date__c</fullName>
    <label>Last QI Date</label>
    <type>Date</type>
</CustomField>