force-app/main/default/objects/FM_Scorecard__c/fields/Last_QI_Score__c.field-meta.xml
<CustomField>
    <fullName>Last_QI_Score__c</fullName>
    <label>Last QI Score</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>