force-app/main/default/objects/FM_Scorecard__c/fields/QI_Average__c.field-meta.xml
<CustomField>
    <fullName>QI_Average__c</fullName>
    <label>QI Average</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>