force-app/main/default/objects/FM_Scorecard__c/fields/QI_Total_Count__c.field-meta.xml
<CustomField>
    <fullName>QI_Total_Count__c</fullName>
    <label>QI Total Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>