force-app/main/default/objects/FM_Scorecard__c/fields/QI_Total_Score__c.field-meta.xml
<CustomField>
    <fullName>QI_Total_Score__c</fullName>
    <label>QI Total Score</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>